[package]
name = "howdeadisit"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
git2 = "0.13"
clap = { version = "2.33", features = ["yaml"] }
rm_rf = "0.6"
chrono = "0.4"
lazy_static = "1.4"
